header-based-routing/middle-common/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middle
spec:
  hosts:
  - middle
  http:
  - headers:
      request:
        add:
          toplevel: blahblahblbhablabhablablabhablabhablabh
    route:
    - destination:
        host: middle
        subset: v1
      weight: 100
      headers:
        request: 
          add:
            name: test
    - destination:
        host: middle
        subset: v2
      weight: 100
      headers:
        request: 
          add:
            name: asdfasdfasdfasdfasdf
    - destination:
        host: middle
        subset: v3
      weight: 100
      headers:
        request: 
          add:
            name: v3v3v3v3v3v3v3v3v3v3v3v3v3v3v3v3v3v3
