header-based-routing/middle-common/vs_middle.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: middle
spec:
  hosts:
  - middle
  http:
  - route:
    - destination:
        host: middle
        subset: v1
      weight: 100
    - destination:
        host: middle
        subset: v2
      weight: 100
